--- a/Dockerfile-todoui
+++ b/Dockerfile-todoui
@@ -1,5 +1,5 @@
-FROM ------
+FROM eclipse-temurin:21-alpine
 RUN mkdir -p /opt/todoui
-WORKDIR ------
-COPY todoui/target/------ /opt/todoui
-CMD ["java", "-jar", "------"]
+WORKDIR /opt/todoui 
+COPY todoui/target/todoui-0.0.1-SNAPSHOT.jar /opt/todoui
+CMD ["java", "-jar", "todoui-0.0.1-SNAPSHOT.jar"]
